--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ E-Mail: <a href="mailto:info@woodcup.ru">info@woodcup.ru</a>
     <span lang="en">Nikolay Semenov</span><span lang="ru">Николай Семенов</span> <span class="card_link"><a href="https://www.linkedin.com/in/nikolay-semenov/"><span class="icon-linkedin"></span></a> <a href="https://twitter.com/Ksider"><span class="icon-twitter"></span></a> <a href="https://t.me/nikolaysemenov"><span class="icon-send"></span></a></span>   
 </div>
 <div class="card_job">
-    <span lang="en">Technical director</span><span lang="ru">Технический директор</span>
+    <span lang="en">CSO</span><span lang="ru">Директор по иновациям</span>
 </div>
 <div class="card_decr">
     <span lang="en">polymer engineer and polymer science researcher</span><span lang="ru">инженер-полимерщик и исследователь в области полимеров</span>
