--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 <div class="row">
     <div class="col-xs-1">&nbsp;</div>
     <div class="col-xs-4">
-        <div class="youtube"><div class="video_link"><a href="https://youtu.be/wOpuOQyJIIU" class="science-video-l popup-youtube"></a></div></div>
+&nbsp;
     </div>
     <div class="col-xs-7">
         <div class="sec_textblock-discr">
@@ -267,6 +267,10 @@ E-Mail: <a href="mailto:info@woodcup.ru">info@woodcup.ru</a>
             </div>
             
         </div>
+
+        <div class="row">
+            <div class="con-xs-4"><div class="youtube"><div class="video_link"><a href="https://youtu.be/wOpuOQyJIIU" class="science-video-l popup-youtube"></a></div></div></div>
+        </div>
     </div>
 </div>
 
@@ -279,8 +283,9 @@ E-Mail: <a href="mailto:info@woodcup.ru">info@woodcup.ru</a>
                 <div class="joinus">join us</div>
                 <div class="social">
 <a href="https://www.linkedin.com/company/woodcup"><span class="icon-linkedin"></span></a> 
+<a href="https://t.me/nikolaysemenov"><span class="icon-send"></span></a> 
+<a href="mailto:info@woodcup.ru"><span class="icon-mail"></span></a>  
 
-<a href="https://t.me/nikolaysemenov"><span class="icon-send"></span></a>                
                 </div>
 </div>
 
