--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ E-Mail: <a href="mailto:info@woodcup.ru">info@woodcup.ru</a>
         </div>
 
         <div class="row">
-            <div class="con-xs-4"><div class="youtube"><div class="video_link"><a href="https://youtu.be/wOpuOQyJIIU" class="science-video-l popup-youtube"></a></div></div></div>
+            <div class="col-xs-4"><div class="youtube"><div class="video_link"><a href="https://youtu.be/wOpuOQyJIIU" class="science-video-l popup-youtube"></a></div></div></div>
         </div>
     </div>
 </div>
