--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="logo" lang="en">Берёзка</div>
             </div>
             <div class="col-xs-4 center">
-<a href="mailto:info@woodcup.ru">info@woodcup.ru</a>
+<!-- <a href="mailto:info@woodcup.ru">info@woodcup.ru</a> -->
             </div>
             <div class="col-xs-4 right">
                 <div id="switch_top">
