--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
         <span lang="ru">Мы сделали<br>посуду,<br>которая<br>не вредит</span>
     </div>
     <div class="first_textblock-discr">
-<span lang="en">Once upon a day, after finishing yet another cup of coffee and throwing it away, we began to ponder: how many people on this planet do this very same thing every single day? How many hundreds of millions of cups end up in landfills all around the world? And just how many billions of years will it take for them to disintegrate? These thoughts lingered on our minds, and we ultimately decided to make ourselves another cup.</span>
-<span lang="ru">Однажды мы допили очередной кофе, выбросили стаканчик и подумали: сколько людей на планете делают так же каждый день? Сколько сотен миллионов стаканчиков лежат на свалках всего мира? Через сколько миллиардов лет они разложатся? Подумали и решили сделать другую посуду</span>
+<span lang="en">Once upon a&nbsp;day, after finishing yet another cup of&nbsp;coffee and throwing it&nbsp;away, we&nbsp;began to&nbsp;ponder: how many people on&nbsp;this planet do&nbsp;this very same thing every single day? How many hundreds of&nbsp;millions of&nbsp;cups end up&nbsp;in&nbsp;landfills all around the world? And just how many billions of&nbsp;years will it&nbsp;take for them to&nbsp;disintegrate? These thoughts lingered on&nbsp;our minds, and we&nbsp;ultimately decided to&nbsp;make ourselves another cup.</span>
+<span lang="ru">Однажды мы&nbsp;допили очередной кофе, выбросили стаканчик и&nbsp;подумали: сколько людей на&nbsp;планете делают так&nbsp;же каждый день? Сколько сотен миллионов стаканчиков лежат на&nbsp;свалках всего мира? Через сколько миллиардов лет они разложатся? Подумали и&nbsp;решили сделать другую посуду.</span>
     </div>
 </div>
             </div>
@@ -115,9 +115,9 @@
     <div class="cycle_textblock">
         <!-- <div class="block"></div> -->
             <div class="cycle_textblock-dcs">
-<span lang="en">Our cups, lids, forks, and plates are unique because we craft them using a combination of sawdust and biopolymer. Creating a durable and flexible material without relying on petrochemical products was no easy feat, and as of now, we are the only ones in Russia utilizing this innovative technology. However, we firmly believe that we will soon outgrow our "startup" status, as we know we are not alone in our vision of leaving behind a thriving planet for future generations!</span>
+<span lang="en">Our cups, lids, forks, and plates are unique because we&nbsp;craft them using a&nbsp;combination of&nbsp;sawdust and biopolymer. Creating a&nbsp;durable and flexible material without relying on&nbsp;petrochemical products was no&nbsp;easy feat, and as&nbsp;of&nbsp;now, we&nbsp;are the only ones in&nbsp;Russia utilizing this innovative technology. However, we&nbsp;firmly believe that we&nbsp;will soon outgrow our &laquo;startup&raquo; status, as&nbsp;we&nbsp;know we&nbsp;are not alone in&nbsp;our vision of&nbsp;leaving behind a&nbsp;thriving planet for future generations!</span>
 
-<span lang="ru">Наши стаканчики, крышечки, вилки и тарелки — особенные. Мы делаем их из опилок и биополимера. Сделать такой прочный и гибкий материал без продуктов нефтехимии было сложно, и в России мы пока единственные, кто использует эту технологию. Но верим, что скоро вырастем из статуса «стартапа», ведь не одни мы мечтаем оставить детям живую планету!</span>
+<span lang="ru">Наши стаканчики, крышечки, вилки и&nbsp;тарелки&nbsp;&mdash; особенные. Мы&nbsp;делаем их&nbsp;из&nbsp;опилок и&nbsp;биополимера. Сделать такой прочный и&nbsp;гибкий материал без продуктов нефтехимии было сложно, и&nbsp;в&nbsp;России мы&nbsp;пока единственные, кто использует эту технологию. Но&nbsp;верим, что скоро вырастем из&nbsp;статуса &laquo;стартапа&raquo;, ведь не&nbsp;одни мы&nbsp;мечтаем оставить детям живую планету!</span>
             </div> 
         
     </div>
@@ -145,7 +145,7 @@
     </div>
     <div class="col-xs-7">
         <div class="sec_textblock-discr">
-<span lang="en">Our product is completely free of petrochemicals, including polypropylene. Unlike many "eco-friendly" cookware options in Russia that utilize a mixture of natural materials such as starch and polypropylene to ensure their products hold up under high temperatures, our product stands out. It's important to note that this method of production does not actually save the planet, as polypropylene takes the same amount of time (500 years) to decompose as larger plastic particles. Furthermore, polypropylene particles can end up in our lungs and cannot be effectively collected or recycled, making it a harmful substance to both our health and the environment.</span>
+<span lang="en">Our product is&nbsp;completely free of&nbsp;petrochemicals, including polypropylene. Unlike many &laquo;eco-friendly&raquo; cookware options in&nbsp;Russia that utilize a&nbsp;mixture of&nbsp;natural materials such as&nbsp;starch and polypropylene to&nbsp;ensure their products hold up&nbsp;under high temperatures, our product stands out. It&rsquo;s important to&nbsp;note that this method of&nbsp;production does not actually save the planet, as&nbsp;polypropylene takes the same amount of&nbsp;time (500&nbsp;years) to&nbsp;decompose as&nbsp;larger plastic particles. Furthermore, polypropylene particles can end up&nbsp;in&nbsp;our lungs and cannot be&nbsp;effectively collected or&nbsp;recycled, making it&nbsp;a&nbsp;harmful substance to&nbsp;both our health and the environment.</span>
 <span lang="ru">Наши стаканчики, крышечки, вилки и&#160;тарелки&#160;&#8212; особенные. Мы&#160;делаем их&#160;из&#160;опилок и&#160;биополимера. Сделать такой прочный и&#160;гибкий материал без продуктов нефтехимии было сложно, и&#160;в&#160;России мы&#160;пока единственные, кто использует эту технологию. Но&#160;верим, что скоро вырастем из&#160;статуса &#171;стартапа&#187;, ведь не&#160;одни мы&#160;мечтаем оставить детям живую планету!</span>
         </div>
     </div>
@@ -269,7 +269,12 @@ E-Mail: <a href="mailto:info@woodcup.ru">info@woodcup.ru</a>
         </div>
 
         <div class="row">
-            <div class="col-xs-4"><div class="youtube"><div class="video_link"><a href="https://youtu.be/wOpuOQyJIIU" class="science-video-l popup-youtube"></a></div></div></div>
+            <div class="col-xs-8"><div class="youtube"><div class="video_link"><a href="https://youtu.be/wOpuOQyJIIU" class="science-video-l popup-youtube"></a></div></div></div>
+            <div class="col-xs-4">
+                <div class="contact_photo">
+                    <img src="" alt="">
+                </div>
+            </div>
         </div>
     </div>
 </div>
