--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ E-Mail: <a href="mailto:info@woodcup.ru">info@woodcup.ru</a>
 
         <div class="card_name">
 <div class="card_title">
-    <span lang="en">Andrei Andreev</span><span lang="ru">Катерина Березина</span>
+    <span lang="en">Katerina Berezina</span><span lang="ru">Катерина Березина</span>
 </div>
 <div class="card_job">
     <span lang="en">CEO</span><span lang="ru">Генеральный директор</span>
