--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ E-Mail: <a href="mailto:info@woodcup.ru">info@woodcup.ru</a>
         </div>
 
         <div class="row">
-            <div class="col-xs-12 col-sm-8 col-md-8 col-lg-6"><div class="youtube"><div class="video_link"><a href="https://youtu.be/wOpuOQyJIIU" class="science-video-l popup-youtube"></a></div></div></div>
+            <div class="col-xs-12 col-sm-8 col-md-8 col-lg-6"><div class="youtube"><div class="video_link"><a href="https://www.youtube.com/watch?v=wOpuOQyJIIU" class="science-video-l"></a></div></div></div>
             <!-- <div class="col-xs-4">
                 <div class="contact_photo">
                     <img src="" alt="">
