--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <div class="col-sm-offset-1 col-xs-12 col-sm-8 col-md-8 col-lg-8">
     <div class="first_textblock-title">
         <span lang="en">We made<br>dishes that<br>don't harm</span>        
-        <span lang="ru">Мы сделали<br>посуду,<br>которая<br>не вредит</span>
+        <span lang="ru">Наша посуда<br>не вредит</span>
     </div>
     <div class="first_textblock-discr">
 <span lang="en">Once upon a&nbsp;day, after finishing yet another cup of&nbsp;coffee and throwing it&nbsp;away, we&nbsp;began to&nbsp;ponder: how many people on&nbsp;this planet do&nbsp;this very same thing every single day? How many hundreds of&nbsp;millions of&nbsp;cups end up&nbsp;in&nbsp;landfills all around the world? And just how many billions of&nbsp;years will it&nbsp;take for them to&nbsp;disintegrate? These thoughts lingered on&nbsp;our minds, and we&nbsp;ultimately decided to&nbsp;make ourselves another cup.</span>
@@ -119,7 +119,7 @@
 <div class="col-sm-offset-1 col-xs-12 col-sm-10 col-md-10 col-lg-10">
     <div class="sec_textblock-title">
     <span lang="en">What makes<br>our tableware<br>unique?</span>        
-    <span lang="ru">Что делает нашу посуду <br>уникальной?</span>
+    <span lang="ru">Что делает её<br>уникальной?</span>
     </div>
 </div>
 </div>
@@ -128,7 +128,7 @@
     <div class="col-sm-offset-3 col-md-offset-4 col-lg-offset-5 col-xs-12 col-sm-9 col-md-8 col-lg-7">
         <div class="sec_textblock-discr">
 <span lang="en">Our product is&nbsp;completely free of&nbsp;petrochemicals, including polypropylene. Unlike many &laquo;eco-friendly&raquo; cookware options in&nbsp;Russia that utilize a&nbsp;mixture of&nbsp;natural materials such as&nbsp;starch and polypropylene to&nbsp;ensure their products hold up&nbsp;under high temperatures, our product stands out. It&rsquo;s important to&nbsp;note that this method of&nbsp;production does not actually save the planet, as&nbsp;polypropylene takes the same amount of&nbsp;time (500&nbsp;years) to&nbsp;decompose as&nbsp;larger plastic particles. Furthermore, polypropylene particles can end up&nbsp;in&nbsp;our lungs and cannot be&nbsp;effectively collected or&nbsp;recycled, making it&nbsp;a&nbsp;harmful substance to&nbsp;both our health and the environment.</span>
-<span lang="ru">Наши стаканчики, крышечки, вилки и&#160;тарелки&#160;&#8212; особенные. Мы&#160;делаем их&#160;из&#160;опилок и&#160;биополимера. Сделать такой прочный и&#160;гибкий материал без продуктов нефтехимии было сложно, и&#160;в&#160;России мы&#160;пока единственные, кто использует эту технологию. Но&#160;верим, что скоро вырастем из&#160;статуса &#171;стартапа&#187;, ведь не&#160;одни мы&#160;мечтаем оставить детям живую планету!</span>
+<span lang="ru">В нашем продукте полностью отсутствуют нефтехимические вещества, включая полипропилен. В отличие от многих "экологичных" вариантов посуды в России, которые используют смесь натуральных материалов, таких как крахмал и полипропилен, чтобы их продукция выдерживала высокие температуры, наш продукт выделяется на фоне других. Важно отметить, что такой способ производства не спасает планету, поскольку полипропилену требуется столько же времени (500 лет), чтобы разложиться, как и более крупным пластиковым частицам. Кроме того, частицы полипропилена могут попасть в наши легкие и не могут быть эффективно собраны или переработаны, что делает его вредным веществом как для нашего здоровья, так и для окружающей среды.</span>
         </div>
     </div>
 
