--- a/index.html
+++ b/index.html
@@ -238,27 +238,27 @@
 
         <div class="gallery">
 
-<a href="https://www.youtube.com/watch?v=wOpuOQyJIIU" data-src="https://img.youtube.com/vi/wOpuOQyJIIU/0.jpg" class="item popup-youtube"></a>
+<a href="https://www.youtube.com/watch?v=wOpuOQyJIIU" data-src="https://img.youtube.com/vi/wOpuOQyJIIU/0.jpg" class="item video popup-youtube">&nbsp;</a>
 
-<a href="https://www.youtube.com/shorts/tpqcU1gymHY" data-src="https://img.youtube.com/vi/tpqcU1gymHY/0.jpg" class="item popup-youtube"></a>
+<a href="https://www.youtube.com/shorts/tpqcU1gymHY" data-src="https://img.youtube.com/vi/tpqcU1gymHY/0.jpg" class="item video popup-youtube">&nbsp;</a>
 
-<a href="pic/gal/fbg1.jpg" data-src="pic/gal/thumb/fbg1.jpg" class="item image-popup"></a>
-<a href="pic/gal/fbg2.jpg" data-src="pic/gal/thumb/fbg2.jpg" class="item image-popup"></a>
-<a href="pic/gal/fbg3.jpg" data-src="pic/gal/thumb/fbg3.jpg" class="item image-popup"></a>
-<a href="pic/gal/fbg4.jpg" data-src="pic/gal/thumb/fbg4.jpg" class="item image-popup"></a>
-<a href="pic/gal/fbg5.jpg" data-src="pic/gal/thumb/fbg5.jpg" class="item image-popup"></a>
-<a href="pic/gal/fbg6.jpg" data-src="pic/gal/thumb/fbg6.jpg" class="item image-popup"></a>
-<a href="pic/gal/fbg7.jpg" data-src="pic/gal/thumb/fbg7.jpg" class="item image-popup"></a>
-<a href="pic/gal/fbg8.jpg" data-src="pic/gal/thumb/fbg8.jpg" class="item image-popup"></a>
-<a href="pic/gal/fbg9.jpg" data-src="pic/gal/thumb/fbg9.jpg" class="item image-popup"></a>
-<a href="pic/gal/fbg10.jpg" data-src="pic/gal/thumb/fbg10.jpg" class="item image-popup"></a>
-<a href="pic/gal/fbg11.jpg" data-src="pic/gal/thumb/fbg11.jpg" class="item image-popup"></a>
-<a href="pic/gal/fbg12.jpg" data-src="pic/gal/thumb/fbg12.jpg" class="item image-popup"></a>
+<a href="pic/gal/fbg1.jpg" data-src="pic/gal/thumb/fbg1.jpg" class="item image-popup">&nbsp;</a>
+<a href="pic/gal/fbg2.jpg" data-src="pic/gal/thumb/fbg2.jpg" class="item image-popup">&nbsp;</a>
+<a href="pic/gal/fbg3.jpg" data-src="pic/gal/thumb/fbg3.jpg" class="item image-popup">&nbsp;</a>
+<a href="pic/gal/fbg4.jpg" data-src="pic/gal/thumb/fbg4.jpg" class="item image-popup">&nbsp;</a>
+<a href="pic/gal/fbg5.jpg" data-src="pic/gal/thumb/fbg5.jpg" class="item image-popup">&nbsp;</a>
+<a href="pic/gal/fbg6.jpg" data-src="pic/gal/thumb/fbg6.jpg" class="item image-popup">&nbsp;</a>
+<a href="pic/gal/fbg7.jpg" data-src="pic/gal/thumb/fbg7.jpg" class="item image-popup">&nbsp;</a>
+<a href="pic/gal/fbg8.jpg" data-src="pic/gal/thumb/fbg8.jpg" class="item image-popup">&nbsp;</a>
+<a href="pic/gal/fbg9.jpg" data-src="pic/gal/thumb/fbg9.jpg" class="item image-popup">&nbsp;</a>
+<a href="pic/gal/fbg10.jpg" data-src="pic/gal/thumb/fbg10.jpg" class="item image-popup">&nbsp;</a>
+<a href="pic/gal/fbg11.jpg" data-src="pic/gal/thumb/fbg11.jpg" class="item image-popup">&nbsp;</a>
+<a href="pic/gal/fbg12.jpg" data-src="pic/gal/thumb/fbg12.jpg" class="item image-popup">&nbsp;</a>
 
-<a href="pic/gal/fbg13.jpg" data-src="pic/gal/thumb/fbg13.jpg" class="item image-popup"></a>
-<a href="pic/gal/fbg14.jpg" data-src="pic/gal/thumb/fbg14.jpg" class="item image-popup"></a>
-<a href="pic/gal/fbg15.jpg" data-src="pic/gal/thumb/fbg15.jpg" class="item image-popup"></a>
-<a href="pic/gal/fbg16.jpg" data-src="pic/gal/thumb/fbg16.jpg" class="item image-popup"></a>
+<a href="pic/gal/fbg13.jpg" data-src="pic/gal/thumb/fbg13.jpg" class="item image-popup">&nbsp;</a>
+<a href="pic/gal/fbg14.jpg" data-src="pic/gal/thumb/fbg14.jpg" class="item image-popup">&nbsp;</a>
+<a href="pic/gal/fbg15.jpg" data-src="pic/gal/thumb/fbg15.jpg" class="item image-popup">&nbsp;</a>
+<a href="pic/gal/fbg16.jpg" data-src="pic/gal/thumb/fbg16.jpg" class="item image-popup">&nbsp;</a>
 <!-- <a href="pic/gal/fbg17.jpg" data-src="pic/gal/thumb/fbg17.jpg" class="item image-popup"></a> -->
     
         </div>
