--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
 <a href="https://www.youtube.com/watch?v=wOpuOQyJIIU" data-src="https://img.youtube.com/vi/wOpuOQyJIIU/0.jpg" class="item video popup-youtube">&nbsp;</a>
 
-<a href="https://www.youtube.com/shorts/tpqcU1gymHY" data-src="https://img.youtube.com/vi/tpqcU1gymHY/0.jpg" class="item video popup-youtube">&nbsp;</a>
+<a href="https://www.youtube.com/shorts/tpqcU1gymHY" data-src="https://img.youtube.com/vi/tpqcU1gymHY/0.jpg" class="item video " target="_blank">&nbsp;</a>
 
 <a href="pic/gal/fbg1.jpg" data-src="pic/gal/thumb/fbg1.jpg" class="item image-popup">&nbsp;</a>
 <a href="pic/gal/fbg2.jpg" data-src="pic/gal/thumb/fbg2.jpg" class="item image-popup">&nbsp;</a>
