--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>  
 </div> 
 
-<div class="main-container spyblock">
+<div class="main-container spyblock" data-color="light">
     <div class="first_textblock">
         <div class="block">
             <div class="row">
@@ -94,7 +94,7 @@
     </div>
 </div>                    
             
-<div class="main-container spyblock">
+<div class="main-container spyblock"  data-color="light">
     <div class="cycle_textblock">
             <div class="cycle_textblock-dcs">
 <span lang="en">Our cups, lids, forks, and plates are unique because we&nbsp;craft them using a&nbsp;combination of&nbsp;sawdust and biopolymer. Creating a&nbsp;durable and flexible material without relying on&nbsp;petrochemical products was no&nbsp;easy feat, and as&nbsp;of&nbsp;now, we&nbsp;are the only ones in&nbsp;Russia utilizing this innovative technology. However, we&nbsp;firmly believe that we&nbsp;will soon outgrow our &laquo;startup&raquo; status, as&nbsp;we&nbsp;know we&nbsp;are not alone in&nbsp;our vision of&nbsp;leaving behind a&nbsp;thriving planet for future generations!</span>
@@ -105,7 +105,7 @@
 </div> 
 
 
-<div class="main-container spyblock">
+<div class="main-container spyblock" data-color="light">
     <div class="sec_textblock">
         <div class="block">
 
@@ -230,7 +230,7 @@
 </div>
 
 
-<div class="main-container spyblock">
+<div class="main-container spyblock" data-color="dark">
     <div class="block">
 
         <div class="gallery">
@@ -286,7 +286,7 @@
     </div>
 </div>
 
-<div class="main-container spyblock">
+<div class="main-container spyblock" data-color="light">
     <div class="block">
         <div class="row center-xs">
             <div class="col-xs-5">
