--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <div class="col-sm-offset-1 col-xs-12 col-sm-8 col-md-8 col-lg-8">
     <div class="first_textblock-title">
         <span lang="en">We made<br>dishes that<br>don't harm</span>        
-        <span lang="ru">Наша посуда<br>не вредит</span>
+        <span lang="ru">Наша<br>посуда<br>не вредит</span>
     </div>
     <div class="first_textblock-discr">
 <span lang="en">Once upon a&nbsp;day, after finishing yet another cup of&nbsp;coffee and throwing it&nbsp;away, we&nbsp;began to&nbsp;ponder: how many people on&nbsp;this planet do&nbsp;this very same thing every single day? How many hundreds of&nbsp;millions of&nbsp;cups end up&nbsp;in&nbsp;landfills all around the world? And just how many billions of&nbsp;years will it&nbsp;take for them to&nbsp;disintegrate? These thoughts lingered on&nbsp;our minds, and we&nbsp;ultimately decided to&nbsp;make ourselves another cup.</span>
