--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
        
 <div class="header-container spyblock" data-color="head">
     <div class="full_bg">
-        <span class="logo" lang="en">Berёzka</span><span class="logo" lang="ru">Берёзка</span><br>
+        <span class="logo" lang="en">Woodcup</span><span class="logo" lang="ru">Woodcup</span><br>
         <span class="description" lang="en">100% bio-based and biodegradable<br>disposable cutlery</span><span class="description" lang="ru">Посуда из 100% растительного<br> и биоразлагаемого сырья</span> 
 
     </div>
