--- a/index.html
+++ b/index.html
@@ -57,8 +57,11 @@
        
 <div class="header-container spyblock" data-color="head">
     <div class="full_bg">
-        <span class="logo" lang="en">Woodcup</span><span class="logo" lang="ru">Woodcup</span><br>
-        <span class="description" lang="en">100% bio-based and biodegradable<br>disposable cutlery</span><span class="description" lang="ru">Посуда из 100% растительного<br> и биоразлагаемого сырья</span> 
+        <img src="pic/temp_logos/wlogo2.svg" alt="Woodcup" class="logo big">
+        <img src="pic/temp_logos/blogo.svg" alt="Woodcup" class="logo small">
+       <!-- <span class="logo" lang="en">Woodcup</span>
+         <span class="logo" lang="ru">Woodcup</span><br> -->
+        <!-- <span class="description" lang="en">100% bio-based and biodegradable<br>disposable cutlery</span><span class="description" lang="ru">Посуда из 100% растительного<br> и биоразлагаемого сырья</span>  -->
 
     </div>
 
