--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     </div>
 
-    <div class="lkly">   
+    <!-- <div class="lkly">   
          <div class="likely likely-small likely-light">
             <div class="twitter" data-via="Ksider"></div>
             <div class="facebook"></div>
@@ -75,7 +75,7 @@
             <div class="whatsapp"></div>
             <div class="pinterest" data-media="pic/bg.jpeg"></div>
           </div> 
-    </div>  
+    </div>   -->
      
 </div> 
 
